--- a/ui/package.json
+++ b/ui/package.json
@@ -39,13 +39,14 @@
     "selfsigned": "^2.0.1",
     "tslib": "^2.3.1",
     "tsparticles": "^1.42.4",
-    "zone.js": "^0.11.5"
+    "zone.js": "^0.11.5",
+    "node-forge": ">=1.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/build-angular": "^13.3.1",
     "@angular/cli": "~12.2.17",
     "@angular/compiler-cli": "~12.2.16",
-    "@types/jasmine": "^3.6.11",
+    "@types/jasmine": "^3.10.5",
     "@types/node": "^12.20.47",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
@@ -55,6 +56,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "node-forge": ">=1.3.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
